traefikIngress/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-blue
spec:
  type: ClusterIP
  selector:
    name: nginx-blue-pod-label
  ports:
    - port: 80
      targetPort: 80
